fixed text alignment issue with about page

--- a/css/main.css
+++ b/css/main.css
@@ -266,27 +266,35 @@ a {
     display: flex;
     margin: 16px 0;
     padding-bottom: 32px;
-    justify-content: space-between;
     align-items: center;
     width: 50%;
     border-bottom: solid 2px lightgray;
 }
 
+    .person h3 {
+        margin: 10px;
+    }
+
     .person p {
         font-size: 20px;
     }
 
-.edward img {
-    height: 20%;
-    width: 20%;
-    margin: 10px;
-    padding: 10px;
-    border: double 5px lightgray;
+.edward {
+    text-align: left;
 }
+
+    .edward img {
+        height: 20%;
+        width: 20%;
+        margin: 0px;
+        padding: 10px;
+        border: double 5px lightgray;
+    }
 
 .ilya {
     display: flex;
     flex-direction: row-reverse;
+    text-align: right;
 }
 
     .ilya img {
@@ -297,17 +305,22 @@ a {
         border: double 5px lightgray;
     }
 
-.davina img {
-    height: 20%;
-    width: 20%;
-    margin: 10px;
-    padding: 10px;
-    border: double 5px lightgray;
+.davina {
+    text-align: left;
 }
+
+    .davina img {
+        height: 20%;
+        width: 20%;
+        margin: 10px;
+        padding: 10px;
+        border: double 5px lightgray;
+    }
 
 .jamie {
     display: flex;
     flex-direction: row-reverse;
+    text-align: right;
 }
 
     .jamie img {
